<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C6627"
    android:gravity="top"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTaskName"
        android:ems="10"
        android:hint="@string/tashnamehint"
        android:inputType="text"
        android:label="@string/AddTaskLabel" >

        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/editTextTaskDisc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTaskDisc"
        android:ems="10"
        android:hint="@string/taskdischint"
        android:inputType="text" >
    </EditText>

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTaskDisc"
        android:layout_toRightOf="@+id/textViewTaskDisc" />

    <Button
        android:id="@+id/btnChangeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextTaskDisc"
        android:text="@string/DatePicker" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnChangeDate"
        android:layout_marginTop="28dp"
        android:text="@string/addbutton" />

    <TextView
        android:id="@+id/textViewTaskDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextTaskName"
        android:text="@string/discription"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/task"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnChangeDate"
        android:layout_alignBottom="@+id/btnChangeDate"
        android:layout_toLeftOf="@+id/btnChangeDate"
        android:text="@string/DateLabel" />

</RelativeLayout>